--- a/packages/ckeditor5-ckfinder/lang/translations/sk.po
+++ b/packages/ckeditor5-ckfinder/lang/translations/sk.po
@@ -12,26 +12,26 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: Kurdish (https://www.transifex.com/ckeditor/teams/11143/ku/)\n"
-"Language: ku\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: Slovak (https://www.transifex.com/ckeditor/teams/11143/sk/)\n"
+"Language: sk\n"
+"Plural-Forms: nplurals=4; plural=(n % 1 == 0 && n == 1 ? 0 : n % 1 == 0 && n >= 2 && n <= 4 ? 1 : n % 1 != 0 ? 2: 3);\n"
 
 msgctxt "Toolbar button tooltip for inserting an image or file via a CKFinder file browser."
 msgid "Insert image or file"
-msgstr "وێنە یان پەڕگە دابنێ"
+msgstr "Vložiť obrázok alebo súbor"
 
 msgctxt "Error message displayed when inserting a resized version of an image failed."
 msgid "Could not obtain resized image URL."
-msgstr ""
+msgstr "Nepodarilo sa získať URL adresu zmenšeného obrázka."
 
 msgctxt "Title of a notification displayed when inserting a resized version of an image failed."
 msgid "Selecting resized image failed"
-msgstr ""
+msgstr "Vybranie zmenšeného obrázka zlyhalo"
 
 msgctxt "Error message displayed when an image cannot be inserted at the current position."
 msgid "Could not insert image at the current position."
-msgstr "نەتوانرا وێنە دابنرێت لەم شوێنە."
+msgstr "Obrázok nie je možné vložiť na vybranú pozíciu."
 
 msgctxt "Title of a notification displayed when an image cannot be inserted at the current position."
 msgid "Inserting image failed"
-msgstr "دانانی وێنە سەرکەوتوو نەبوو"
+msgstr "Vloženie obrázka zlyhalo"
