--- a/packages/ckeditor5-font/lang/contexts.json
+++ b/packages/ckeditor5-font/lang/contexts.json
@@ -6,6 +6,8 @@
 	"Huge": "Dropdown option label for the 'huge' font size preset.",
 	"Font Family": "Tooltip for the font family dropdown.",
 	"Default": "Dropdown option label for the default font family.",
+	"Font color": "Label of a button that allows selecting a font color.",
+	"Font Background Color": "Label of a button that allows selecting a font background color.",
 	"Remove color": "Label or a button that removes the color from the text (font color and background).",
 	"Black": "Label of a button that applies a black text color (font color and background)",
 	"Dim grey": "Label of a button that applies a dim grey text color (font color and background)",
