--- a/packages/ckeditor5-ckfinder/lang/translations/es.po
+++ b/packages/ckeditor5-ckfinder/lang/translations/es.po
@@ -12,26 +12,26 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: German (https://www.transifex.com/ckeditor/teams/11143/de/)\n"
-"Language: de\n"
+"Language-Team: Spanish (https://www.transifex.com/ckeditor/teams/11143/es/)\n"
+"Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "Toolbar button tooltip for inserting an image or file via a CKFinder file browser."
 msgid "Insert image or file"
-msgstr "Bild oder Datei einfügen"
+msgstr "Insertar imagen o archivo"
 
 msgctxt "Error message displayed when inserting a resized version of an image failed."
 msgid "Could not obtain resized image URL."
-msgstr "Die URL des angepassten Bildes konnte nicht abgerufen werden."
+msgstr "No se puede acceder a la URL de la imagen redimensionada"
 
 msgctxt "Title of a notification displayed when inserting a resized version of an image failed."
 msgid "Selecting resized image failed"
-msgstr "Das angepasste Bild konnte nicht ausgewählt werden."
+msgstr "Fallo eligiendo imagen redimensionada"
 
 msgctxt "Error message displayed when an image cannot be inserted at the current position."
 msgid "Could not insert image at the current position."
-msgstr "Das Bild konnte an der aktuellen Position nicht eingefügt werden."
+msgstr "No se puede insertar una imagen en la posición actual"
 
 msgctxt "Title of a notification displayed when an image cannot be inserted at the current position."
 msgid "Inserting image failed"
-msgstr "Einfügen des Bildes fehlgeschlagen"
+msgstr "Error insertando imagen"
