--- a/packages/ckeditor5-heading/lang/translations/id.po
+++ b/packages/ckeditor5-heading/lang/translations/id.po
@@ -42,12 +42,12 @@ msgstr "Tajuk 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "Tajuk 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "Tajuk 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "Tajuk 6"
