--- a/packages/ckeditor5-ui/lang/translations/es.po
+++ b/packages/ckeditor5-ui/lang/translations/es.po
@@ -26,4 +26,4 @@ msgstr "Editor de Texto Enriquecido"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr ""
+msgstr "Cuadro de edición"
