--- a/packages/ckeditor5-ui/lang/translations/id.po
+++ b/packages/ckeditor5-ui/lang/translations/id.po
@@ -12,18 +12,18 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: Serbian (https://www.transifex.com/ckeditor/teams/11143/sr/)\n"
-"Language: sr\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language-Team: Indonesian (https://www.transifex.com/ckeditor/teams/11143/id/)\n"
+"Language: id\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "Title of the CKEditor5 editor."
 msgid "Rich Text Editor, %0"
-msgstr "Проширени уређивач текста, %0"
+msgstr "Editor Teks Kaya, %0"
 
 msgctxt "Title of the CKEditor5 editor."
 msgid "Rich Text Editor"
-msgstr "Проширен уређивач текста"
+msgstr "Editor Teks Kaya"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr "Блок уређивач"
+msgstr "Sunting blok"
