--- a/packages/ckeditor5-heading/lang/translations/en-au.po
+++ b/packages/ckeditor5-heading/lang/translations/en-au.po
@@ -42,12 +42,12 @@ msgstr "Heading 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "Heading 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "Heading 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "Heading 6"
