--- a/packages/ckeditor5-heading/lang/translations/hu.po
+++ b/packages/ckeditor5-heading/lang/translations/hu.po
@@ -42,12 +42,12 @@ msgstr "Címsor 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "Címsor 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "Címsor 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "Címsor 6"
