--- a/packages/ckeditor5-heading/lang/translations/sv.po
+++ b/packages/ckeditor5-heading/lang/translations/sv.po
@@ -42,12 +42,12 @@ msgstr "Rubrik 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "Rubrik 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "Rubrik 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "Rubrik 6"
