--- a/packages/ckeditor5-heading/lang/translations/zh-cn.po
+++ b/packages/ckeditor5-heading/lang/translations/zh-cn.po
@@ -42,12 +42,12 @@ msgstr "标题 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "标题 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "标题 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "标题 6"
