--- a/packages/ckeditor5-heading/lang/translations/zh.po
+++ b/packages/ckeditor5-heading/lang/translations/zh.po
@@ -42,12 +42,12 @@ msgstr "標題 3"
 
 msgctxt "Dropdown option label for the heading level 4 format."
 msgid "Heading 4"
-msgstr ""
+msgstr "標題 4"
 
 msgctxt "Dropdown option label for the heading level 5 format."
 msgid "Heading 5"
-msgstr ""
+msgstr "標題 5"
 
 msgctxt "Dropdown option label for the heading level 6 format."
 msgid "Heading 6"
-msgstr ""
+msgstr "標題 6"
