--- a/packages/ckeditor5-ui/lang/translations/en-au.po
+++ b/packages/ckeditor5-ui/lang/translations/en-au.po
@@ -26,4 +26,4 @@ msgstr "Rich Text Editor"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr ""
+msgstr "Edit block"
