--- a/packages/ckeditor5-ui/lang/translations/ne.po
+++ b/packages/ckeditor5-ui/lang/translations/ne.po
@@ -26,4 +26,4 @@ msgstr "धनी पाठ सम्पादक"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr ""
+msgstr "ब्लक सम्पादन गर्न"
