--- a/packages/ckeditor5-ui/lang/translations/ru.po
+++ b/packages/ckeditor5-ui/lang/translations/ru.po
@@ -26,4 +26,4 @@ msgstr "Редактор"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr ""
+msgstr "Редактировать блок"
