--- a/packages/ckeditor5-ui/lang/translations/zh.po
+++ b/packages/ckeditor5-ui/lang/translations/zh.po
@@ -26,4 +26,4 @@ msgstr "豐富文字編輯器"
 
 msgctxt "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)"
 msgid "Edit block"
-msgstr ""
+msgstr "編輯區塊"
