Other: Updated translations. [skip ci]

--- a/packages/ckeditor5-upload/lang/translations/lt.po
+++ b/packages/ckeditor5-upload/lang/translations/lt.po
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: Estonian (https://www.transifex.com/ckeditor/teams/11143/et/)\n"
-"Language: et\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: Lithuanian (https://www.transifex.com/ckeditor/teams/11143/lt/)\n"
+"Language: lt\n"
+"Plural-Forms: nplurals=4; plural=(n % 10 == 1 && (n % 100 > 19 || n % 100 < 11) ? 0 : (n % 10 >= 2 && n % 10 <=9) && (n % 100 > 19 || n % 100 < 11) ? 1 : n % 1 != 0 ? 2: 3);\n"
 
 msgctxt "A message that a file upload is in progress."
 msgid "Upload in progress"
-msgstr "Üleslaadimine pooleli"
+msgstr "Įkelima"
