--- a/packages/ckeditor5-upload/lang/translations/fi.po
+++ b/packages/ckeditor5-upload/lang/translations/fi.po
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: Estonian (https://www.transifex.com/ckeditor/teams/11143/et/)\n"
-"Language: et\n"
+"Language-Team: Finnish (https://www.transifex.com/ckeditor/teams/11143/fi/)\n"
+"Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "A message that a file upload is in progress."
 msgid "Upload in progress"
-msgstr "Üleslaadimine pooleli"
+msgstr "Lähetys käynnissä"
