--- a/packages/ckeditor5-upload/lang/translations/zh.po
+++ b/packages/ckeditor5-upload/lang/translations/zh.po
@@ -12,10 +12,10 @@
 #
 msgid ""
 msgstr ""
-"Language-Team: Estonian (https://www.transifex.com/ckeditor/teams/11143/et/)\n"
-"Language: et\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: Chinese (Taiwan) (https://www.transifex.com/ckeditor/teams/11143/zh_TW/)\n"
+"Language: zh_TW\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgctxt "A message that a file upload is in progress."
 msgid "Upload in progress"
-msgstr "Üleslaadimine pooleli"
+msgstr "正在上傳"
