--- a/packages/ckeditor5-ui/lang/contexts.json
+++ b/packages/ckeditor5-ui/lang/contexts.json
@@ -3,5 +3,6 @@
 	"Rich Text Editor": "Title of the CKEditor5 editor.",
 	"Edit block": "Label of the block toolbar icon (a block toolbar is displayed next to each paragraph, heading, list item, etc. and contains e.g. block formatting options)",
 	"Next": "Label for a button showing the next thing (tab, page, etc.).",
-	"Previous": "Label for a button showing the previous thing (tab, page, etc.)."
+	"Previous": "Label for a button showing the previous thing (tab, page, etc.).",
+	"%0 of %1": "Label for a \"page X of Y\" status of a typical next/previous page navigation."
 }
