--- a/packages/ckeditor5-ckfinder/lang/translations/az.po
+++ b/packages/ckeditor5-ckfinder/lang/translations/az.po
@@ -22,11 +22,11 @@ msgstr "Şəkil və ya fayl əlavə ed"
 
 msgctxt "Error message displayed when inserting a resized version of an image failed."
 msgid "Could not obtain resized image URL."
-msgstr ""
+msgstr "Ölçüsü dəyişmiş təsvirin URL-ni əldə etmək mümkün olmadı"
 
 msgctxt "Title of a notification displayed when inserting a resized version of an image failed."
 msgid "Selecting resized image failed"
-msgstr ""
+msgstr "Ölçüsü dəyişmiş təsvirin seçilməsi uğursuz oldu"
 
 msgctxt "Error message displayed when an image cannot be inserted at the current position."
 msgid "Could not insert image at the current position."
