--- a/packages/ckeditor5-ckfinder/lang/translations/ku.po
+++ b/packages/ckeditor5-ckfinder/lang/translations/ku.po
@@ -22,11 +22,11 @@ msgstr "وێنە یان پەڕگە دابنێ"
 
 msgctxt "Error message displayed when inserting a resized version of an image failed."
 msgid "Could not obtain resized image URL."
-msgstr ""
+msgstr "نەتوانرا بەستەری وێنەی قەبارە گۆڕاو بەدەست بێت."
 
 msgctxt "Title of a notification displayed when inserting a resized version of an image failed."
 msgid "Selecting resized image failed"
-msgstr ""
+msgstr "دیاریکردنی وێنەی قەبارە گۆڕاو سەرکەوتوو نەبوو"
 
 msgctxt "Error message displayed when an image cannot be inserted at the current position."
 msgid "Could not insert image at the current position."
