--- a/packages/ckeditor5-ckfinder/lang/translations/pl.po
+++ b/packages/ckeditor5-ckfinder/lang/translations/pl.po
@@ -18,20 +18,20 @@ msgstr ""
 
 msgctxt "Toolbar button tooltip for inserting an image or file via a CKFinder file browser."
 msgid "Insert image or file"
-msgstr "Wstaw obraz lub plik"
+msgstr "Wstaw obrazek lub plik"
 
 msgctxt "Error message displayed when inserting a resized version of an image failed."
 msgid "Could not obtain resized image URL."
-msgstr "Nie można pobrać adresu URL obrazu po przeskalowaniu."
+msgstr "Nie można pobrać adresu URL obrazka po przeskalowaniu."
 
 msgctxt "Title of a notification displayed when inserting a resized version of an image failed."
 msgid "Selecting resized image failed"
-msgstr "Nie powiodło się wybranie obrazu po przeskalowaniu"
+msgstr "Wybranie obrazka po przeskalowaniu nie powiodło się."
 
 msgctxt "Error message displayed when an image cannot be inserted at the current position."
 msgid "Could not insert image at the current position."
-msgstr "Nie można wstawić obrazu w bieżącej lokalizacji."
+msgstr "Nie można wstawić obrazka w bieżącej lokalizacji."
 
 msgctxt "Title of a notification displayed when an image cannot be inserted at the current position."
 msgid "Inserting image failed"
-msgstr "Nie powiodło się wstawienie obrazu."
+msgstr "Wstawienie obrazka nie powiodło się."
